[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "python-aiconfig"
version = "1.1.33"
authors = [
  { name="LastMile AI" },
  { name="Sarmad Qadri", email="sarmad@lastmileai.dev" },
]
description = "Python library for AIConfig SDK"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/lastmile-ai/aiconfig"
"Bug Tracker" = "https://github.com/lastmile-ai/aiconfig/issues"

[project.scripts]
aiconfig = "aiconfig.scripts.aiconfig_cli:main"

# Black formatting
[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''