[metadata]
name = aiconfig-tools
description = Library for working with AIConfig

[options]
packages =
    aiconfig_tools
python_requires = >=3.7
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[tool:pytest]
addopts = --verbose

[flake8]
max-line-length = 160
ignore = E203, W503

