[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_notebook"
version = "0.0.8"
description = "Notebook for interacting with models in AIConfig"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  {name= "LastMile AI" },
]
keywords = ["gradio-custom-component", "gradio-template-Fallback", "aiconfig", "workbook", "notebook"]
# Add dependencies here. Used for dynamic requirements below
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]


[tool.hatch.build]
artifacts = ["/backend/gradio_notebook/templates", "*.pyi", "Users/rossdancraig/Projects/gradio-workbook/gradioworkbook/backend/gradio_notebook/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_notebook"]
