[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "aiconfig_extension_hugging_face_transformers"
version = "0.0.2"
authors = [
  { name="LastMile AI" },
  { name="Rossdan Craig", email="rossdan@lastmileai.dev" },
  { name="Ankush Pala", email="ankush@lastmileai.dev" },
]
description = "An extension for using Hugging Face transformers to parse models for AIConfig."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/lastmile-ai/aiconfig/"
Issues = "https://github.com/lastmile-ai/aiconfig/issues"

# Black formatting
[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''