[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "aiconfig_extension_llama"
version = "0.0.2"
authors = [
  { name="Jonathan Lessinger", email="jonathan@lastmileai.dev" },
]
description = "Model Parser extension for Llama"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/lastmile-ai/aiconfig"
"Bug Tracker" = "https://github.com/lastmile-ai/aiconfig/issues"
